[package]
name = "eco-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2" }
noise = { version = "0.9.0" }
# same version as used in noise
rand = "0.9.2"
bevy_rand = "0.12"
bevy_prng = { version = "0.12", features = ["wyrand"] }
num-traits = "0.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
